@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ This Work is in the public domain and is provided on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied,
-  ~ including, without limitation, any warranties or conditions of TITLE,
-  ~ NON-INFRINGEMENT, MERCHANTABILITY, or FITNESS FOR A PARTICULAR PURPOSE.
-  ~ You are solely responsible for determining the appropriateness of using
-  ~ this Work and assume any risks associated with your use of this Work.
-  ~
-  ~ This Work includes contributions authored by David E. Jones, not as a
-  ~ "work for hire", who hereby disclaims any copyright to the same.
+This Work is in the public domain and is provided on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied,
+including, without limitation, any warranties or conditions of TITLE,
+NON-INFRINGEMENT, MERCHANTABILITY, or FITNESS FOR A PARTICULAR PURPOSE.
+You are solely responsible for determining the appropriateness of using
+this Work and assume any risks associated with your use of this Work.
+
+This Work includes contributions authored by David E. Jones, not as a
+"work for hire", who hereby disclaims any copyright to the same.
   -->
 <screen xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:noNamespaceSchemaLocation="http://moqui.org/xsd/xml-screen-1.0.xsd"
         default-menu-title="Tests" default-menu-index="9" require-authentication="false">
+    <pre-actions>
+        <set field="html_title" value="A Silly Test Title"/>
+        <set field="html_description" value="This page was made for testing, and that's just what it'll do."/>
+        <set field="html_keywords" value="moqui,test,label,user,messages,error,silly"/>
+    </pre-actions>
+
     <widgets>
         <link url="../../Login/login" text="Login as John Doe, wrong password test">
             <parameter name="userId" value="john.doe"/>
